web/src/main/webapp/includes/styles.css
/* ... */
.table_horizontal  tr td, .table_vertical tr td{
	padding: 3px 6px;
    border-style: solid;
    border-left-width: 0px;
	border-right-width: 1px;
	border-top-width:0px;
	border-bottom-width:1px;
    border-color: #E6E6E6;
	border-spacing:1px;
}

.table_horizontal tr:first-child td, .table_vertical tr td:first-child{
	font-weight: bold;
	color: #666666;
    border-color: #CCCCCC; 
}

.table_vertical tr td:first-child{
	width:200px;
}
	
.table_horizontal tr, .table_vertical tr{
	vertical-align:top;
}

.table_horizontal, .table_vertical{
    border-color: #CCCCCC; 
}

.table_cell_left {
    padding: 0.2em;
    border-style: solid;
    border-top-width: 1px;
    border-left-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    border-top-color: #E6E6E6;
    vertical-align: top;
    text-align: left;
}

.table_cell_top {
    padding: 0.2em;
    border-style: solid;
    border-top-width: 0px;
    border-left-width: 1px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    border-left-color: #CCCCCC;
    vertical-align: top;
}

.table_cell_noborder {
    padding: 0.2em;
    vertical-align: top;
}

.table_cell_nopadding { padding-top: 0px;
    padding-left: 0px;
    padding-right: 0px;
    padding-bottom: 0px;
    border-style: solid;
    border-top-width: 1px;
    border-left-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    border-left-color: #CCCCCC;
    border-top-color: #E6E6E6;
    vertical-align: top;
}

.table_divider { border-style: solid;
    border-top-width: 1px;
    border-left-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 1px;
    border-left-color: #CCCCCC;
    border-bottom-color: #CCCCCC;
    border-top-color: #CCCCCC;
    font-weight: bold;
    color: #666666;
    vertical-align: top;
    line-height: 8px;
}


.table_tools { padding-top: 4px;
    padding-bottom: 6px;
    vertical-align: top;
}

.table_actions { background-image: url(../images/table_actions_BG.gif);
    background-repeat: repeat-x;
    background-position: bottom;
    padding-top: 3px;
    padding-left: 6px;
    padding-right: 6px;
    vertical-align: top;
}

/*/table*/

.homeboxes { width: 200px;
    padding-right: 10px;
    vertical-align: top;
}

.homebox_title { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 14px;
    font-weight: bold;
    color: #789EC5;
}

.homebox_bullets { font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 11px;
    background-image: url(../images/bullet.gif);
    background-repeat: no-repeat;
    background-position: top left;
    padding-left: 12px;
    padding-right: 5px;
}

.button { background-color:transparent;
    border-width: 0px;
    background-image: url(../images/button_BG.gif);
    background-repeat: no-repeat;
    background-position: bottom;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 11px;
    color: #FFFFFF;
    font-weight: bold;
    width: 80px;
    height: 17px;
    margin-top: 6px;
    margin-right: 10px;
}

.button_div { background-color:transparent;
    border-width: 0px;
    background-image: url(../images/button_BG.gif);
    background-repeat: no-repeat;
    background-position: bottom;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 18px;
    color: #FFFFFF;
    font-weight: bold;
    width: 80px;
    height: 17px;
    margin-top: 6px;
    margin-right: 10px;
}


.loginbutton { background-color:transparent;
    border-width: 0px;
    background-image: url(../images/loginbutton_BG.gif);
    background-repeat: no-repeat;
    background-position: bottom;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 11px;
    color: #FFFFFF;
    font-weight: bold;
    width: 60px;
    height: 17px;
    margin-right: 10px;
}

.button_search_dis { background-color:transparent;
    border-width: 0px;
    background-image: url(../images/button_Search_BG_dis.gif);
    background-repeat: no-repeat;
    background-position: bottom;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 11px;
    color: #E6E6E6;
    font-weight: bold;
    width: 37px;
    height: 17px;
    margin-top: 2px;
    margin-left: 3px;
}

.button_search { background-color:transparent;
    border-width: 0px;
    background-image: url(../images/button_Search_BG.gif);
    background-repeat: no-repeat;
    background-position: bottom;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 11px;
    color: #FFFFFF;
    font-weight: bold;
    width: 37px;
    height: 17px;
    margin-top: 2px;
    margin-left: 3px;
}

.button_remove {
    visibility: hidden;
    background-color:transparent;
    border-width: 0px;
    background-image: url(../images/bt_Remove.gif);
    background-repeat: no-repeat;
    background-position: bottom;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 11px;
    color: #FFFFFF;
    font-weight: bold;
    width: 24px;
    height: 15px;
    /*margin-top: 2px;
   margin-left: 3px;*/
}

.button_medium { background-color:transparent;
    border-width: 0px;
    background-image: url(../images/button_medium_BG.gif);
    background-repeat: no-repeat;
    background-position: bottom;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 11px;
    color: #FFFFFF;
    font-weight: bold;
    width: 120px;
    height: 17px;
    margin-top: 6px;
    margin-right: 10px;
}
/* ... */

